<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sample</string>
    <string name="action_settings">Settings</string>
    <string name="invalues_string_sayText">put value here</string>
    <string name="invalues_string_button">clickme</string>
    <string name="invalues_string_sayhello">hello</string>
    <string name="invalues_string_complain">bitch Button</string>
    <string name="invalues_seekbar">this is for slider</string>
    <string name="title_activity_list">ListActivity</string>

    <string name="liact">List Activity</string>
    <string name="libtn">Add</string>
    <string name="open_list">Open List</string>
     <string name="pref_title">Open List</string>
      <string name="pref_sum">Open List</string>
      <string name="open_pref">open pref</string>
      <string name="title_pref">open der pref</string>
      <!-- needed for preferences list
       -->
      <string-array name="titles1">
          <item>tile der</item>
      </string-array>
      <string-array name="values1">
          <item> value der</item>
      </string-array>
</resources>
